--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,16 @@
+boto3==1.12.36
+botocore==1.15.36
+cycler==0.10.0
+docutils==0.15.2
+jmespath==0.9.5
+kiwisolver==1.2.0
+matplotlib==3.2.1
 numpy==1.18.2
+pandas==1.0.3
 pkg-resources==0.0.0
+pyparsing==2.4.6
+python-dateutil==2.8.1
+pytz==2019.3
+s3transfer==0.3.3
+six==1.14.0
+urllib3==1.25.8
